crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_strip_exports_unused.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";
import mongodb from "mongodb";

export const onGet = () => {
  const data = mongodb.collection.whatever;
  return {
    body: {
      data,
    },
  };
};

export default component$(() => {
  return <div>cmp</div>;
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export const onGet = () => {
  throw "Symbol removed by Qwik Optimizer, it can not be called from current platform";
};
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);
=== test.tsx_test_component_XXXXXXXXXXXX.tsx === (ENTRY)
export const test_component_XXXXXXXXXXXX = () => {
  return <div>cmp</div>;
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
=== DIAGNOSTICS ===

[]
