crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_strip_exports_used.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$, useResource$ } from "@qwik.dev/core";
import mongodb from "mongodb";

export const onGet = () => {
  const data = mongodb.collection.whatever;
  return {
    body: {
      data,
    },
  };
};

export default component$(() => {
  useResource$(() => {
    return onGet();
  });
  return <div>cmp</div>;
});

============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export const onGet = () => {
  throw "Symbol removed by Qwik Optimizer, it can not be called from current platform";
};
export default /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);
============================= test.tsx_test_component_XXXXXXXXXXXX.tsx (ENTRY POINT)==
import { qrl } from "@qwik.dev/core";
import { useResourceQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_useResource_XXXXXXXXXXXX");
export const test_component_XXXXXXXXXXXX = () => {
  useResourceQrl(/*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "test_component_useResource_XXXXXXXXXXXX"));
  return <div>cmp</div>;
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    242,
    325
  ]
}
*/
============================= test.tsx_test_component_useResource_XXXXXXXXXXXX.tsx (ENTRY POINT)==
import { onGet } from "./test";
export const test_component_useResource_XXXXXXXXXXXX = () => {
  return onGet();
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_useResource_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component_useResource",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_useResource_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "test_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useResource$",
  "captures": false,
  "loc": [
    265,
    296
  ]
}
*/
== DIAGNOSTICS ==

[]
