crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_strip_server_code.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import {
  component$,
  serverLoader$,
  serverStuff$,
  $,
  client$,
  useStore,
  useTask$,
} from "@qwik.dev/core";
import { isServer } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";
import { handler } from "serverless";

export const Parent = component$(() => {
  const state = useStore({
    text: "",
  });

  // Double count watch
  useTask$(async () => {
    if (!isServer) return;
    state.text = await mongo.users();
    redis.set(state.text);
  });

  serverStuff$(async () => {
    // should be removed too
    const a = $(() => {
      // from $(), should not be removed
    });
    const b = client$(() => {
      // from clien$(), should not be removed
    });
    return [a, b];
  });

  serverLoader$(handler);

  useTask$(() => {
    // Code
  });

  return <div onClick$={() => console.log("parent")}>{state.text}</div>;
});

============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_0TaiDayHrlo = () => import("./test.tsx_Parent_component_0TaiDayHrlo");
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_0TaiDayHrlo, "s_0TaiDayHrlo"));

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;AAcA,OAAO,MAAM,uBAAS,gEA8BnB"}',
);
============================= test.tsx_Parent_component_0TaiDayHrlo.js (ENTRY POINT)==
import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { serverLoaderQrl } from "@qwik.dev/core";
import { serverStuffQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
const i_P8oRQhHsurk = () => import("./test.tsx_Parent_component_useTask_1_P8oRQhHsurk");
const i_gDH1EtUWqBU = () => import("./test.tsx_Parent_component_useTask_gDH1EtUWqBU");
const i_zM9okM0TYrA = () => import("./test.tsx_Parent_component_div_q_e_click_zM9okM0TYrA");
export const s_0TaiDayHrlo = () => {
  const state = useStore({
    text: "",
  });
  // Double count watch
  useTaskQrl(/*#__PURE__*/ qrl(i_gDH1EtUWqBU, "s_gDH1EtUWqBU", [state]));
  serverStuffQrl(/*#__PURE__*/ _noopQrl("s_r1qAHX7Opp0"));
  serverLoaderQrl(/*#__PURE__*/ _noopQrl("s_k1L0DiPQV1I"));
  useTaskQrl(/*#__PURE__*/ qrl(i_P8oRQhHsurk, "s_P8oRQhHsurk"));
  return /*#__PURE__*/ _jsxSorted(
    "div",
    null,
    {
      "q-e:click": /*#__PURE__*/ qrl(i_zM9okM0TYrA, "s_zM9okM0TYrA"),
    },
    _wrapProp(state, "text"),
    3,
    "u6_0",
  );
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;;;;;;;;;6BAciC;IAC/B,MAAM,QAAQ,SAAS;QACrB,MAAM;IACR;IAEA,qBAAqB;IACrB;;;IAMA;IAWA;IAEA;IAIA,qBAAO,WAAC;QAAI,WAAQ;iBAAgC;AACtD"}',
);
/*
{
  "origin": "test.tsx",
  "name": "s_0TaiDayHrlo",
  "entry": null,
  "displayName": "test.tsx_Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "test.tsx_Parent_component_0TaiDayHrlo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    293,
    877
  ]
}
*/
============================= test.tsx_Parent_component_useTask_gDH1EtUWqBU.js (ENTRY POINT)==
import { _captures } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";
export const s_gDH1EtUWqBU = async () => {
  const state = _captures[0];
  state.text = await mongo.users();
  redis.set(state.text);
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;6BAoBW;;IAEP,MAAM,IAAI,GAAG,MAAM,MAAM,KAAK;IAC9B,MAAM,GAAG,CAAC,MAAM,IAAI"}',
);
/*
{
  "origin": "test.tsx",
  "name": "s_gDH1EtUWqBU",
  "entry": null,
  "displayName": "test.tsx_Parent_component_useTask",
  "hash": "gDH1EtUWqBU",
  "canonicalFilename": "test.tsx_Parent_component_useTask_gDH1EtUWqBU",
  "path": "",
  "extension": "js",
  "parent": "s_0TaiDayHrlo",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    384,
    493
  ],
  "captureNames": [
    "state"
  ]
}
*/
============================= test.tsx_Parent_component_serverStuff_a_2ca3HLDC7yc.js (ENTRY POINT)==
export const s_2ca3HLDC7yc = () => {
  // from $(), should not be removed
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"6BA4BgB;AACV,kCAAkC;AACpC"}',
);
/*
{
  "origin": "test.tsx",
  "name": "s_2ca3HLDC7yc",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff_a",
  "hash": "2ca3HLDC7yc",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_a_2ca3HLDC7yc",
  "path": "",
  "extension": "js",
  "parent": "s_r1qAHX7Opp0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    571,
    625
  ]
}
*/
============================= test.tsx_Parent_component_serverStuff_b_client_v9qawr2Inkk.js (ENTRY POINT)==
export const s_v9qawr2Inkk = () => {
  // from clien$(), should not be removed
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"6BA+BsB;AAChB,uCAAuC;AACzC"}',
);
/*
{
  "origin": "test.tsx",
  "name": "s_v9qawr2Inkk",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff_b_client",
  "hash": "v9qawr2Inkk",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_b_client_v9qawr2Inkk",
  "path": "",
  "extension": "js",
  "parent": "s_r1qAHX7Opp0",
  "ctxKind": "function",
  "ctxName": "client$",
  "captures": false,
  "loc": [
    650,
    709
  ]
}
*/
============================= test.tsx_Parent_component_useTask_1_P8oRQhHsurk.js (ENTRY POINT)==
export const s_P8oRQhHsurk = () => {
  // Code
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"6BAuCW;AACP,OAAO;AACT"}',
);
/*
{
  "origin": "test.tsx",
  "name": "s_P8oRQhHsurk",
  "entry": null,
  "displayName": "test.tsx_Parent_component_useTask_1",
  "hash": "P8oRQhHsurk",
  "canonicalFilename": "test.tsx_Parent_component_useTask_1_P8oRQhHsurk",
  "path": "",
  "extension": "js",
  "parent": "s_0TaiDayHrlo",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    776,
    799
  ]
}
*/
============================= test.tsx_Parent_component_div_q_e_click_zM9okM0TYrA.js (ENTRY POINT)==
export const s_zM9okM0TYrA = () => console.log("parent");

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"6BA2CwB,IAAM,QAAQ,GAAG,CAAC"}',
);
/*
{
  "origin": "test.tsx",
  "name": "s_zM9okM0TYrA",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_q_e_click",
  "hash": "zM9okM0TYrA",
  "canonicalFilename": "test.tsx_Parent_component_div_q_e_click_zM9okM0TYrA",
  "path": "",
  "extension": "js",
  "parent": "s_0TaiDayHrlo",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    827,
    854
  ]
}
*/
== DIAGNOSTICS ==

[]
